Map copy must happen with ordering preserved